İş Emri - TP düzenlendi.

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -2029,7 +2029,7 @@ $.ajax({
 
                     OlusturulanIsEmirleri.push(SonIsEmri);
 
-                    if (RefMakine != "MAKİNE SEÇİNİZ")
+                    if (RefMakine != "SEÇİNİZ")
                     {
                         var SonRefIsEmri = RefMakine + "23" + (IsEmirleriRefMakine[IsEmirleriRefMakine.length - 1].MAX_ISEMRINO).toString().padStart(6, '0') + (i + 1).toString().padStart(3, '0');
 
@@ -2050,7 +2050,7 @@ $.ajax({
                     var Veri = {
                         ISEMRINO: SonIsEmri,
                         STOKADI: StokAdi,
-                        GIRDI2: RefMakine != "MAKİNE SEÇİNİZ" ? GuncelSeriData.SERI_NO : "-",
+                        GIRDI2: RefMakine != "SEÇİNİZ" ? GuncelSeriData.SERI_NO : "-",
                         REF_ISEMRINO: SonRefIsEmri,
                         REF_STOKOLCUSU: RefStokAdi,
                         ADET: PaketMiktari,
