İş Emri - TP Cari İsimleri Düzeltildi.

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -432,7 +432,7 @@
                                         </td>
 
                                         <td class="text-center p-1">
-                                            <select class="js-select" style="width:200px" disabled onchange="ReferansStokSecimi()">
+                                            <select class="js-select" style="width:200px" disabled onchange="ReferansStokSecimi(this)">
                                                 <option selected disabled>SEÇİNİZ</option>
                                                 @foreach (var item in ViewBag.Stok_Adlari)
                                                 {
@@ -1873,6 +1873,7 @@
             document.getElementById(tableId).getElementsByTagName("tr")[rows].remove();
             rows--;
         }
+
         KaydetAktivite();
     }
     //#region Genel Metotlar
@@ -1885,9 +1886,10 @@
         KaydetAktivite();
     }
 
-    function ReferansStokSecimi()
+    function ReferansStokSecimi(Satir)
     {
         KaydetAktivite();
+        CariGetir(Satir);
     }
 
     //Stok değiştiğinde gerçekleşecek metot.
@@ -1909,7 +1911,12 @@
         var rowNumber = Satir.parentNode.parentNode.rowIndex;
 
         var Cariler = @Html.Raw(Json.Encode(ViewBag.Cariler));
-        var StokKodu = document.getElementById('TPTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('td')[2].getElementsByTagName('select')[0].value;
+        var StokKodu = document.getElementById('TPTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[3].value;
+
+        if (StokKodu == "SEÇİNİZ")
+        {
+            StokKodu = document.getElementById('TPTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[1].value;
+        }
 
         var FiltreliCariler = Cariler.filter(x => x.STOK_KODU == StokKodu);
 
@@ -1921,26 +1928,26 @@
 
         document.getElementById('TPTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[4].innerHTML = CariListe;
     }
-     function DLCariGetir(SatirNo)
-     {
+    function DLCariGetir(SatirNo)
+    {
+        var rowNumber = SatirNo;
 
-         var rowNumber = SatirNo;
+        var Cariler = @Html.Raw(Json.Encode(ViewBag.Cariler));
+        var StokKodu = document.getElementById('DLTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[3].value;
 
-     var Cariler = @Html.Raw(Json.Encode(ViewBag.Cariler));
-         var StokKodu = document.getElementById('DLTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[3].value;
-         if (StokKodu == "SEÇİNİZ") {
-             StokKodu = document.getElementById('DLTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[1].value;
-         }
+        if (StokKodu == "SEÇİNİZ") {
+            StokKodu = document.getElementById('DLTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[1].value;
+        }
 
-         var FiltreliCariler = Cariler.filter(x => x.STOK_ADI == StokKodu);
-     var CariListe = `<option value="EFECE GALVANİZ" disabled selected>EFECE GALVANİZ</option>`;
+        var FiltreliCariler = Cariler.filter(x => x.STOK_ADI == StokKodu);
+        var CariListe = `<option value="EFECE GALVANİZ" disabled selected>EFECE GALVANİZ</option>`;
 
-     for (var i = 0; i < FiltreliCariler.length; i++) {
-         CariListe += `<option value="${FiltreliCariler[i].CARI_ISIM}">${FiltreliCariler[i].CARI_ISIM}</option>`;
-     }
+        for (var i = 0; i < FiltreliCariler.length; i++) {
+        CariListe += `<option value="${FiltreliCariler[i].CARI_ISIM}">${FiltreliCariler[i].CARI_ISIM}</option>`;
+        }
 
-     document.getElementById('DLTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[4].innerHTML = CariListe;
- }
+        document.getElementById('DLTable').getElementsByTagName('tr')[rowNumber].getElementsByTagName('select')[4].innerHTML = CariListe;
+    }
     //String olarak gelen veriyi, html element olarak geriye döner.
     function StringToHtml(str) {
         var dom = document.createElement('div');
@@ -2032,25 +2039,28 @@
 
         miktar2input = document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[2].value;
 
-        $.getJSON("http://192.168.2.13:83/api/stok/miktar/" + kod, function (data) {
-            var miktar2 = data[0].PAY_1;
-            var mik1 = data[0].PAYDA_1;
+        if (miktar2input != "" && con != "" && kod != "SEÇİNİZ")
+        {
+            $.getJSON("http://192.168.2.13:83/api/stok/miktar/" + kod, function (data) {
+                var miktar2 = data[0].PAY_1;
+                var mik1 = data[0].PAYDA_1;
 
-            if (con.length > 0) {
-                if (miktar2input.length > 0) {
-                    if (rownumber === 1) {
-                        document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = Math.round(((con / miktar2) * mik1) * miktar2input);
+                if (con.length > 0) {
+                    if (miktar2input.length > 0) {
+                        if (rownumber === 1) {
+                            document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = Math.round(((con / miktar2) * mik1) * miktar2input);
+                        } else {
+                            document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = Math.round(((con / miktar2) * mik1) * miktar2input);
+                        }
                     } else {
-                        document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = Math.round(((con / miktar2) * mik1) * miktar2input);
+                        document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = null;
                     }
-                } else {
+                }
+                else {
                     document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = null;
                 }
-            }
-            else {
-                document.getElementById("TPTable").getElementsByTagName("tr")[rownumber].getElementsByTagName("input")[4].value = null;
-            }
-        });
+            });
+        }
 
         KaydetAktivite();
     }
@@ -2245,7 +2255,7 @@
         var Grup = [];
         var Tip = $('input[name="uretim-tip"]:checked').val();
         /*Tip = (Tip == undefined) ? 'DL' : Tip;*/
-        Liste.forEach(function (a) {
+        Liste?.forEach(function (a) {
            
             if (!this[`${a.STOKADI}${a.MUSTERI}`]) {
                 this[`${a.STOKADI}${a.MUSTERI}`] = { MUSTERI: a.MUSTERI, STOKADI: a.STOKADI, ADET: 0, AGIRLIK: 0 };
